--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "google-api-python-client>=2.179.0",
     "langchain-openai>=0.3.30",
     "openai>=1.99.9",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.2",
     "prefect>=3.4.12",
 ]
 
